# android_kernel_device_modules_6.1_nothing_mt6878

./: Android.mk  BUILD.bazel  Kbuild  Kconfig.ext  MAINTAINERS  Makefile.ext  README.md  build.config.mtk.aarch64.mgk  build.config.mtk_kernel_device_modules  build.sh  build_abi.sh  kenv.mk  mgk.bzl  mgk_ko.bzl
Documentation/virt/geniezone/: introduction.rst
arch/arm64/configs/: mgk_64_k515_defconfig  mgk_64_k61_defconfig  mgk_64_kmainline_defconfig
arch/arm64/geniezone/: Makefile  driver.c  gzvm_arch_common.h  vcpu.c  vgic.c  vm.c
drivers/char/hw_random/: sec-rng.c
drivers/char/rpmb/: Makefile  rpmb-mtk.c
drivers/chino-e/: Kconfig  Makefile
drivers/chino-e/hwinfo/: Kconfig  Makefile  board_id_adc.c  board_id_adc.h  bootinfo.c  gpio_boardid.c  hwinfo.c  hwinfo.h
drivers/clk/mediatek/: Kconfig  Makefile  clk-fhctl-ap.c  clk-fhctl-debug.c  clk-fhctl-gpueb.c  clk-fhctl-mcupm.c  clk-fhctl-pll.c  clk-fhctl-util.h  clk-fhctl-vcp.c  clk-fhctl.c  clk-fhctl.h  clk-fmeter-mt6878.c  clk-fmeter-mt6897.c  clk-fmeter-mt6985.c  clk-fmeter-mt6989.c  clk-fmeter.c  clk-fmeter.h  clk-gate.c  clk-gate.h  clk-mt6878-adsp.c  clk-mt6878-bus.c  clk-mt6878-cam.c  clk-mt6878-ccu.c  clk-mt6878-fmeter.h  clk-mt6878-img.c  clk-mt6878-mdpsys.c  clk-mt6878-mmsys.c  clk-mt6878-peri.c  clk-mt6878-vcodec.c  clk-mt6878-vlp.c  clk-mt6878.c  clk-mt6897-adsp.c  clk-mt6897-bus.c  clk-mt6897-cam.c  clk-mt6897-ccu.c  clk-mt6897-fmeter.h  clk-mt6897-img.c  clk-mt6897-mdpsys.c  clk-mt6897-mmsys.c  clk-mt6897-peri.c  (+48 more)
drivers/clocksource/: Kconfig  Makefile
drivers/cpufreq/: Kconfig.arm  Makefile  mediatek-cpufreq-hw.c  mediatek-cpufreq-hw_fdvfs.c  mediatek-cpufreq-hw_fdvfs.h  mediatek-cpufreq-hw_main.c
drivers/dma-buf/heaps/: Kconfig  Makefile  deferred-free-helper.c  mtk_cache_pool.c  mtk_dmabuf_monitor.c  mtk_heap.h  mtk_heap_debug.c  mtk_heap_priv.h  mtk_heap_refill.c  mtk_page_pool.c  mtk_page_pool.h  mtk_sec_heap.c  mtk_system_heap.c  page_pool.c  system_heap.c
drivers/dma/mediatek/: Kconfig  Makefile  mtk-uart-apdma.c  mtk-uart-apdma.h
drivers/gpu/mediatek/: Kconfig  Makefile
drivers/i2c/busses/: Kconfig  Makefile  i2c-mt65xx.c
drivers/iio/adc/: Kconfig  Makefile  mt6375-auxadc.c  mt6681-auxadc.c  mtk-spmi-pmic-adc.c
drivers/input/fingerprint/: Kconfig
drivers/input/keyboard/: Kconfig  Makefile  mtk-kpd.c
drivers/input/touchscreen/: Kconfig  Makefile
drivers/interconnect/mediatek/: Kconfig  Makefile  mmqos-global.h  mmqos-hrt.c  mmqos-mt6878.c  mmqos-mt6897.c  mmqos-mt6985.c  mmqos-mt6989.c  mmqos-mtk.c  mmqos-mtk.h  mmqos-test.c  mmqos-test.h  mmqos-vcp-memory.h  mmqos-vcp.c  mmqos-vcp.h  mmqos_events.h  mtk-emi.c
drivers/iommu/: Kconfig  Makefile  mtk_iommu.c  mtk_iommu.h
drivers/leds/: Kconfig  Makefile  leds-mt6360.c  leds-mtk-disp.c  leds-mtk.c  leds-mtk.h
drivers/mailbox/: Kconfig  Makefile  mtk-ise-mailbox.c  mtk-ise-mailbox.h
drivers/media/platform/: Kconfig  Makefile
drivers/memory/: Kconfig  Makefile  mtk-smi.c
drivers/memory/mediatek/: Makefile  dramc.c  emi-cen.c  emi-fake-eng.c  emi-isu.c  emi-mpu-hook-v1.c  emi-mpu-test-v2.c  emi-mpu-v2.c  emi-mpu.c  emi-slb.c  slc-parity.c  smpu-hook-v1.c  smpu.c
drivers/mfd/: Kconfig  Makefile  mt6375.c  mt6681-core.c  mt6685-core.c  mtk-spmi-pmic.c
drivers/misc/: Kconfig  Makefile
drivers/misc/haptic/: Kconfig  Makefile  haptic_drv.c  haptic_drv.h  richtap_drv.c  richtap_drv.h  rt6010.c  rt6010.h
drivers/misc/mediatek/: Kconfig  Makefile
drivers/mmc/host/: Kconfig  Makefile  mtk-mmc-dbg.h  mtk-mmc.c  mtk-mmc.h
drivers/net/network/: Kconfig
drivers/nothing_stability/: Kconfig  Makefile  nothing_disk_usage.c  nothing_readahead_trace.c  nothing_task_meminfo.c  nothing_value_check.c  nothing_writeback_kmsg.c
drivers/nvmem/: Kconfig  Makefile  mt6681-efuse.c
drivers/pci/controller/: Kconfig  Makefile  pcie-mediatek-gen3.c
drivers/phy/mediatek/: Kconfig  Makefile  phy-mtk-pcie.c  phy-mtk-tphy.c  phy-mtk-xsphy.c
drivers/pinctrl/mediatek/: Kconfig  Makefile  mtk-eint.c  mtk-eint.h  pinctrl-mt6363.c  pinctrl-mt6765.c  pinctrl-mt6779.c  pinctrl-mt6878.c  pinctrl-mt6897.c  pinctrl-mt6985.c  pinctrl-mt6989.c  pinctrl-mt8188.c  pinctrl-mt8195.c  pinctrl-mtk-common-v2.c  pinctrl-mtk-common-v2.h  pinctrl-mtk-mt6878.h  (+7 more)
drivers/pwm/: Kconfig  Makefile  pwm-mtk-disp.c
drivers/regulator/: Kconfig  Makefile  mt6315-regulator.c  mt6316-regulator.c  mt6373-regulator.c  mtk-dvfsrc-regulator.c  rt5133-regulator.c
drivers/remoteproc/: Makefile  mtk_ccd.c  mtk_ccd_mem.c  mtk_ccu_common.c  mtk_ccu_common.h  mtk_ccu_common_mssv.h  mtk_ccu_ipi.c  mtk_ccu_isp71.c  mtk_ccu_isp71.h  mtk_ccu_isp71_mssv.c  mtk_ccu_isp7sp_mssv_pmem.h  mtk_ccu_isp7sp_mssv_pmem_b.h
drivers/reset/: Kconfig  Makefile
drivers/rpmsg/: Makefile  mtk_ccd_rpmsg_ipi.c
drivers/rtc/: Kconfig  Makefile  rtc-mt6685.c
drivers/scsi/: Kconfig
drivers/spi/: Kconfig  Makefile  spi-mt65xx.c
drivers/spmi/: Kconfig  Makefile  spmi-mtk-debug.c  spmi-mtk-mpu.c  spmi-mtk-pmif-core.c  spmi-mtk.h
drivers/tee/: Kconfig  Makefile
drivers/thermal/: Kconfig  Makefile
drivers/ufs/: Kconfig  Makefile  ufs-mediatek-btag.c  ufs-mediatek-btag.h  ufs-mediatek-dbg.c  ufs-mediatek-dbg.h  ufs-mediatek-ise.c  ufs-mediatek-mimic.c  ufs-mediatek-mimic.h  ufs-mediatek-rpmb.c  ufs-mediatek-sip.h  ufs-mediatek-sysfs.c  ufs-mediatek-sysfs.h  ufs-mediatek.c  ufs-mediatek.h
drivers/usb/: Kconfig  Makefile
drivers/virt/: Kconfig
drivers/watchdog/: Kconfig  Makefile
include/linux/: gzvm_drv.h  leds-mtk.h  rpmb.h
kernel/config/: lcov.config
kernel/configs/: eng.config  ext_modules.list  fpga.config  kasan.config  khwasan.config  pkvm.config  thinmodem.config  userdebug.config  wifionly.config
kernel/kleaf/: _setup_env.sh  gen_build_config.py  mgk_64_aging_k61.bzl  mgk_64_entry_level_k61.bzl  mgk_64_fpga_k61.bzl  mgk_64_k61.bzl  mgk_64_k61_thinmodem.bzl  mgk_64_k61_wifi.bzl  mgk_64_kasan_k61.bzl  mgk_64_khwasan_k61.bzl  mgk_64_pkvm_k61.bzl  mgk_64_vulscan_k61.bzl  mgk_modules.bzl
scripts/: dts_warnings  gen_build_config.py  gki_checker.py  gki_checker_white_list.txt
(+2047 files in other folders)
